--- a/style.css
+++ b/style.css
@@ -1,25 +1,31 @@
 html, body {
-  /* background-color: white;
-  margin: 0;
-  box-sizing: border-box; */
-
   margin: 0;
   padding: 0;
   height: 100%;
   display: flex;
   flex-direction: column;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
 }
 
-body{
+/* body{
   min-height: 100vh;
-  
+} */
+
+.wrapper {
+  max-width: 1440px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
+
 
 header, #pokemon_content, footer {
-  padding: 15px; /* Optional: Abstand für Header, Content und Footer */
+  padding: 15px;
 }
 
 header {
+  /* width: 100%; */
+
   height: 150px;
   background-color: white;
   display: flex;
@@ -29,7 +35,12 @@ header {
   box-shadow: 0px 9px 10px rgba(0, 0, 0, 0.389);
 }
 
-h1 {
+.logo_img{
+  width: 300px;
+  height: auto;
+}
+
+/* h1 {
   font-family: 'Pokemon Hollow', Arial, Helvetica, sans-serif;
   color: black;
   width: 300px;
@@ -41,13 +52,13 @@ h1 {
   text-align: center;
   margin-block-start: 0;
   margin-block-end: 8px;
-}
+} */
 
-.textcolor {
+/* .textcolor {
   background-image:linear-gradient(135deg, #d946ef, #3b82f6, #06b6d4);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
- }
+ } */
 
 .d_none {
   display: none !important;
@@ -187,6 +198,8 @@ button:hover{
 
 
 footer{
+  /* width: 100%; */
+
   background-color: #090909;
   color: white;
   text-align: center;
@@ -196,10 +209,62 @@ footer{
 
 
 @font-face {
-  font-family: 'Pokemon Hollow';
-  src: url('./fonts/Pokemon/Hollow.ttf') format('truetype');
+  font-family: 'Bangers';
+  src: url('./fonts/Bangers-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
 
+@font-face {
+  font-family: 'Lato';
+  src: url('./fonts/Lato-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('./fonts/Lato-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('./fonts/Lato-Italic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+}
+
+
+
+
+@media (max-width: 1024px) {
+  h1 {
+    font-size: 56px;
+  }
+}
+
+@media (max-width: 780px){
+  .logo_img{
+    width: 200px;
+    height: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  header {
+    height: 120px;
+  }
+
+  h1 {
+    font-size: 48px;
+  }
+
+  #pokemon_content {
+    gap: 12px;
+  }
+}
 
 
 @media (max-width: 430px) {
