--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ footer {
 }
 
 header {
-  height: 150px;
+  height: auto;
   background-color: white;
   display: flex;
   justify-content: center;
@@ -48,6 +48,63 @@ header {
 
 .hidden_arrow {
   visibility: hidden;
+}
+
+.input_container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input {
+  color: black;
+  border: 2px solid #8707ff;
+  border-radius: 10px;
+  padding: 10px 25px;
+  background: transparent;
+  max-width: 190px;
+}
+
+.input:active {
+  box-shadow: 2px 2px 15px #8707ff inset;
+}
+
+#info_field p {
+  color: red;
+  font-size: 18px;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+
+.toggle_container {
+  display: flex;
+  justify-content: center;
+}
+
+.toggle_icon {
+  width: 20px;
+  height: 20px;
+}
+
+.toggle_icon {
+  width: 24px;
+  height: 24px;
+  padding-bottom: 18px;
+}
+
+.toggle_icon:hover {
+  cursor: pointer;
+}
+
+.dark_mode_icon {
+  filter: invert(50%);
+}
+
+.dark_mode {
+  background-color: black;
+  color: white;
 }
 
 #pokemon_content {
@@ -122,57 +179,6 @@ header {
   background-color: rgba(0, 0, 0, 0.762);
   transition: opacity 300ms ease-in-out;
   z-index: 10;
-}
-
-.input_container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-
-.input {
-  color: black;
-  border: 2px solid #8707ff;
-  border-radius: 10px;
-  padding: 10px 25px;
-  background: transparent;
-  max-width: 190px;
-}
-
-.input:active {
-  box-shadow: 2px 2px 15px #8707ff inset;
-}
-
-#info_field p {
-  color: red;
-  font-size: 18px;
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 8px;
-}
-
-.toggle_container {
-  display: flex;
-  justify-content: center;
-}
-
-.toggle_icon {
-  width: 20px;
-  height: 20px;
-}
-
-.toggle_icon:hover{
-  cursor: pointer;
-}
-
-.dark_mode_icon {
-  filter: invert(50%);
-}
-
-.dark_mode {
-  background-color: black;
-  color: white;
 }
 
 button {
