--- a/style.css
+++ b/style.css
@@ -15,20 +15,15 @@ body {
   box-sizing: border-box;
 }
 
-header,
-#pokemon_content,
-footer {
-  padding: 15px;
-}
-
 header {
+  width: 100%;
   height: auto;
   background-color: white;
   display: flex;
   justify-content: center;
-  /* flex-direction: column; */
   align-items: center;
   box-shadow: 0px 9px 10px rgba(0, 0, 0, 0.389);
+  padding-bottom: 8px;
 }
 
 .logo_input_container {
@@ -78,8 +73,8 @@ header {
   color: red;
   font-size: 18px;
   text-align: center;
-  margin-top: 0;
-  margin-bottom: 8px;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
 .toggle_container {
@@ -112,6 +107,7 @@ header {
   flex-wrap: wrap;
   justify-content: center;
   gap: 16px;
+  padding: 16px;
 }
 
 .loader {
@@ -206,10 +202,12 @@ button:hover {
 }
 
 footer {
+  width: 100%;
   background-color: black;
   color: white;
   font-size: 12px;
   text-align: end;
+  margin-top: auto;
 }
 
 footer p {
